partial return order

--- a/ecomprj/templates/core/checkout.html
+++ b/ecomprj/templates/core/checkout.html
@@ -315,7 +315,7 @@
                                     address: 'Razorpay Corporate Office'
                                 },
                                 theme: {
-                                    color: '#D19C97'
+                                    color:  'rgb(0,174,191);'
                                 }
                             };
         
