--- a/ecomprj/templates/core/wallet.html
+++ b/ecomprj/templates/core/wallet.html
@@ -1,14 +1,11 @@
-<!-- core/wallet.html -->
 {% extends 'core/base.html' %}
 {% load static %}
-
 {% block content %}
-
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-8 mt-10 mx-auto">
             <h4 style="color: black;">Balance: {{ total_wallet_balance }}</h4>
-            <form id="recharge-form">
+            <form id="recharge-form" action="/create-razorpay-order/">
                 <div class="form-group">
                     <label for="amount">Enter Amount to Recharge:</label>
                     <input type="number" class="form-control" id="amount" name="amount" placeholder="Enter amount" required>
@@ -22,20 +19,21 @@
                         <th>Created At</th>
                         <th>Status</th>
                         <th>Amount</th>
-                        <th>Action</th> <!-- New column for action button -->
+                        {% comment %} <-- Column for action button --> {% endcomment %}
                     </tr>
                 </thead>
                 <tbody class="align-middle">
                     {% for wallet in wallets %}
                     <tr>
                         <td class="align-middle">{{ wallet.created_at }}</td>
-                        <td class="align-middle">{{ wallet.status }}</td>
-                        <td class="align-middle">{{ wallet.amount }}</td>
                         <td class="align-middle">
-                            {% if wallet.status == 'credited' %}
-                                <button class="btn btn-primary add-amount" data-wallet-id="{{ wallet.id }}">Add Amount</button>
+                            {% if wallet.status %}
+                                {{ wallet.status }}
+                            {% else %}
+                                Added
                             {% endif %}
                         </td>
+                        <td class="align-middle">{{ wallet.amount }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -43,29 +41,19 @@
         </div>
     </div>
 </div>
-
-{% endblock content %}
-
-{% block scripts %}
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+ <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         document.querySelector('#recharge-form').addEventListener('submit', function(event) {
             event.preventDefault();
             var amount = document.querySelector('#amount').value;
             initiateRazorpayPayment(amount);
-            console.log(amount)
         });
 
-        document.querySelectorAll('.add-amount').forEach(function(button) {
-            button.addEventListener('click', function(event) {
-                event.preventDefault();
-                var walletId = this.getAttribute('data-wallet-id');
-                initiateRazorpayPayment(walletId);
-                console.log(walletId)
-            });
-        });
+       
     });
-
     function initiateRazorpayPayment(amount) {
         fetch('/create-razorpay-order/', {
             method: 'POST',
@@ -81,25 +69,27 @@
         .then(function(data) {
             var options = {
                 key: 'rzp_test_oR7x1WyMRe9zxr',
-                amount: data.amount * 100, // Amount should be in paisa
+                amount: data.total* 100,  // Corrected here
                 currency: 'INR',
                 name: 'TECHX',
-                description: 'Wallet Recharge',
-                order_id: data.order_id,
+                description: 'Adeed to wallet',
                 image: 'https://static-00.iconduck.com/assets.00/bill-payment-icon-2048x2048-vpew78n5.png',
-                handler: function(response) {
-                    // Handle the success callback here if needed
+                handler: function(responseb) {
+                    window.location.href = '/razorpay/' + selects;
                 },
                 prefill: {
-                    name: '{{ customer.name }}', // Use appropriate user details
-                    email: '{{ customer.email }}',
-                    contact: '{{ customer.phone }}'
+                    name: '',
+                    email: '',
+                    contact: ''
+                },
+                notes: {
+                    address: 'Razorpay Corporate Office'
                 },
                 theme: {
-                    color: 'rgb(0, 174, 191)'
-                }
+                    color:  'rgb(0,174,191);'
+                }   
             };
-
+    
             var rzp = new Razorpay(options);
             rzp.open();
         })
@@ -107,7 +97,10 @@
             console.error('Error:', error);
         });
     }
+    
 </script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  
-{% endblock scripts %}
+
+
+
+
+{% endblock content %}
