--- a/ecomprj/templates/core/cart.html
+++ b/ecomprj/templates/core/cart.html
@@ -76,19 +76,26 @@
                                                 </td>
                                             </tr>
                                             {% endfor %}
-                                            <form method="post" class="mb-5" action="{% url 'core:cart' %}">
+                                                                                        <!-- Add this dropdown menu where the user enters the coupon code -->
+                                            <form method="post">
                                                 {% csrf_token %}
-                                                <div class="input-group" style="width: 27%;">
-                                                    <input type="text" class="form-control p-4" placeholder="Coupon Code" name="coupon_code">
-                                                    <div class="input-group-append">
-                                                        <button class="btn btn-primary"style="background-color: rgb(0,174,191);" type="submit">Apply Coupon</button>
-                                                    </div>
+                                               
+                                                <div class="form-group">
+                                                    <label for="coupon_select">Choose a Coupon:</label>
+                                                    <select class="form-control" id="coupon_select" name="coupon_code">
+                                                        <option value="">Select a Coupon</option>
+                                                        {% for coupon in coupons %}
+                                                            <option value="{{ coupon.coupon_code }}">{{ coupon.coupon_code }}</option>
+                                                        {% endfor %}
+                                                    </select>
                                                 </div>
+                                                <button type="submit" class="btn btn-primary">Apply Coupon</button>
                                             </form>
+
                                         </tbody>
                                         
                     
-                                        {% if messages %}
+                                        {% comment %} {% if messages %}
                                         <div class="messages">
                                             {% for message in messages %}
                                                 <div class="{{ message.tags }}">
@@ -97,7 +104,7 @@
                                             {% endfor %}
                                         </div>
                                     {% endif %}
-                                          
+                                           {% endcomment %}
                                     </table>
                                               
                                 </div>
