--- a/ecomprj/templates/core/home.html
+++ b/ecomprj/templates/core/home.html
@@ -309,7 +309,7 @@
                                                     </div>
                                                     <h4><a class="featured-product-name" href="{% url 'core:product_detail'  i.id %}"> {{ i.model }}</a></h4>
                                                     <div class="featured-price-box">
-                                                        <span class="new-price">₹{{ i.offer }}</span>
+                                                        <span class="new-price">₹{{ i.price }}</span>
                                                     </div>
                                                 </div>
                                             </div>
