--- a/ecomprj/templates/core/invoice.html
+++ b/ecomprj/templates/core/invoice.html
@@ -607,7 +607,7 @@ table, th, td {
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="logo d-flex align-items-center">
-                                            <a href="{% url 'home' %}" class="mr-20"><b><h3 style="color: rgb(187, 171, 68);">Techzone</h3></b></a>
+                                            <a href="{% url 'core:home' %}" class="mr-20"><b><h3 style="color: rgb(187, 171, 68);">Techzone</h3></b></a>
                                             <!-- <div class="text">
                                                 <strong class="text-brand">Techzone </strong> <br />
                                 
