--- a/ecomprj/templates/core/order_details.html
+++ b/ecomprj/templates/core/order_details.html
@@ -63,7 +63,7 @@
                    <p>  </p>
                  {% endif %}
                 <div class="border-start h-100"></div>
-                {% comment %} <a href="{% url 'main_app:pdf' product.id %}"> {% endcomment %}
+                <a href="{% url 'core:generate_invoice' product.id  %}">
                   <button type="button" class="btn btn-secondary">Invoice</button>
                 </a>
               </div>
