--- a/ecomprj/templates/core/invoice.html
+++ b/ecomprj/templates/core/invoice.html
@@ -607,7 +607,7 @@ table, th, td {
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="logo d-flex align-items-center">
-                                            <a href="{% url 'core:home' %}" class="mr-20"><b><h3 style="color: rgb(187, 171, 68);">Techzone</h3></b></a>
+                                            <a href="{% url 'core:home' %}" class="mr-20"><b><h3 style="color: rgb(187, 171, 68);">TECHX</h3></b></a>
                                             <!-- <div class="text">
                                                 <strong class="text-brand">Techzone </strong> <br />
                                 
@@ -616,7 +616,7 @@ table, th, td {
                                     </div>
                                     <div class="col-md-6 text-end">
                                         <h4>INVOICE</h4>
-                                        <h5>Sold By: TECHZONE RETAIL LIMITED</h5>
+                                        <h5>Sold By: TECHX RETAIL LIMITED</h5>
                                         <p>Madivala Village and Sy<br>
                                         no.51/1 of thatanahalli village, kasaba hobli,<br>
                                         anekal taluk,Banglore urban District<br>
@@ -699,7 +699,7 @@ table, th, td {
                                 </div>
                                 <div class="row text-center">
                                     <div class="hr mt-30 mb-30"></div>
-                                    <p class="mb-0 text-muted"><strong>Hey {{ request.user }}, </strong>Thanks for our shopping at Techzone</p>
+                                    <p class="mb-0 text-muted"><strong>Hey {{ request.user }}, </strong>Thanks for our shopping at TECHX</p>
                                 </div>
                             </div>
                         </div>
