--- a/ecomprj/templates/core/invoice.html
+++ b/ecomprj/templates/core/invoice.html
@@ -626,7 +626,7 @@ table, th, td {
                                         <strong>Shipping Address:</strong><br>
                                         {{ user_first_name }} {{ user_last_name }}<br>
 
-                                        {{ user_address.address_1 }},<br> {{ user_address.city }},<br> {{ user_address.state }}, <br>{{ user_address.country }} - {{ user_address.pin }}
+                                        {{ user_address.address_name }},<br> {{ user_address.city }},<br> {{ user_address.state }}, <br>{{ user_address.country }} - {{ user_address.pin }}
                                     </div>
                                 </div>
                             </div>
