--- a/ecomprj/templates/core/checkout.html
+++ b/ecomprj/templates/core/checkout.html
@@ -173,7 +173,7 @@
                                             </tr>
                                             <tr class="cart-subtotal">
                                                 <th>Shipping Charge</th>
-                                                <td><span class="amount">Rs 10</span></td>
+                                                <td><span class="amount">Rs  {{ discount_amount }}</span></td>
                                             </tr>
                                             {% if discount_amount %}
                                             <tr class="cart-subtotal">
