--- a/ecomprj/templates/core/checkout.html
+++ b/ecomprj/templates/core/checkout.html
@@ -178,7 +178,7 @@
                                             {% if discount_amount %}
                                             <tr class="cart-subtotal">
                                                 <th>Applied coupon</th>
-                                                <td><span class="amount"> ₹{{ discount_amount }}</span></td>
+                                                <td><span class="amount"> ₹{{ coupon_amount }}</span></td>
                                             </tr>
                                             {% endif %}
                                             <tr class="order-total">
