--- a/ecomprj/templates/adminside/home.html
+++ b/ecomprj/templates/adminside/home.html
@@ -273,7 +273,39 @@ input[type="month"].form-control {
                     <button class="btn btn-primary ml-2" type="submit">Generate Report</button>
                 </form>
                 
-                
+                <div class="container mt-4">
+                    <div class="row mt-5">
+                        <div class="col-5">
+                            <h2>Category</h2>
+                            <canvas id="donut"></canvas>
+                        </div>
+                        <div class="col-2">
+                            <ul class="list-group">
+                                <li class="list-group-item active" aria-current="true">Top Products</li>
+                                {% for i in top_products %}
+                                <li class="list-group-item"> {{ i.model }}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        <div class="col-2">
+                            <ul class="list-group">
+                                <li class="list-group-item active" aria-current="true">Top Categories</li>
+                                {% for i in top_categories %}
+                                <li class="list-group-item">{{ i.name }}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        {% comment %} <div class="col-2">
+                            <ul class="list-group">
+                                <li class="list-group-item active" aria-current="true">Top Brands</li>
+                                {% for i in top_brands %}
+                                <li class="list-group-item">{{ i.name }}</li>
+                                {% endfor %}
+                            </ul>
+                        </div> {% endcomment %}
+                    </div>
+                </div>
+    
             </div>
             
             <div class="mt-5"> <h2>Category</h2> </div>
